--- a/Reports/Took-Took.ru.ipynb
+++ b/Reports/Took-Took.ru.ipynb
@@ -409,6 +409,423 @@
     "rep_diff = report.diff(periods=1) # разница от месяца к месяцу\n",
     "rep_diff[curr_month:].astype(int) # разница между предыдущим и отчетным месяцами"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "<>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>visit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>971</th>\n",
+       "      <td>(not set)</td>\n",
+       "      <td>2104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>736</th>\n",
+       "      <td>np - /?cnt=catalog&amp;r=2438</td>\n",
+       "      <td>1340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>737</th>\n",
+       "      <td>np - /?cnt=catalog&amp;r=1428</td>\n",
+       "      <td>548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>738</th>\n",
+       "      <td>np - /</td>\n",
+       "      <td>361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>739</th>\n",
+       "      <td>np - /?pid=pokaz</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>740</th>\n",
+       "      <td>np - /?cnt=catalog&amp;r=1010</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>купить раздвижные двери межкомнатные дешево</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972</th>\n",
+       "      <td>межкомнатные двери недорого с установкой под ключ</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>741</th>\n",
+       "      <td>дверное полотно</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>742</th>\n",
+       "      <td>полотно двери</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>np - /?pid=menu-katalog</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>744</th>\n",
+       "      <td>полотно дверное</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>745</th>\n",
+       "      <td>np - /?cnt=catalog&amp;r=999</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>973</th>\n",
+       "      <td>тук тук двери</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>467</th>\n",
+       "      <td>двери межкомнатные</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>468</th>\n",
+       "      <td>двери под ключ</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>469</th>\n",
+       "      <td>двери с фурнитурой</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>межкомнатные двери недорого</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>470</th>\n",
+       "      <td>двери со скидкой</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>471</th>\n",
+       "      <td>магазин межкомнатных дверей</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>746</th>\n",
+       "      <td>np - /?pid=contact</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>747</th>\n",
+       "      <td>np - /?pid=skidki</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>748</th>\n",
+       "      <td>np - /?cnt=catalog&amp;r=1018</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749</th>\n",
+       "      <td>np - /?cnt=catalog&amp;r=2966</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>472</th>\n",
+       "      <td>межкомнатные двери с замками</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>974</th>\n",
+       "      <td>межкомнатные двери недорого с установкой под к...</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>975</th>\n",
+       "      <td>took-took.ru</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>473</th>\n",
+       "      <td>двери с доставкой и установкой</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474</th>\n",
+       "      <td>двери с капителью</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>двери эмалированные</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>полотно дверное глухое барселона cpl 80x200 см...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>полотно двери купить</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>дверные полотна в леруа мерлен</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>полотно дверное</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>полотно дверное глухое</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>полотно дверное глухое napoly 60x200 см шпон ц...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>виды дверей по конструкции полотна</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>двери аксессуары павелецкая</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>дверное полотно</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>дверное полотно 500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>338</th>\n",
+       "      <td>дверное полотно 800х2000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>дверное полотно helly шпон дуба</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>дверное полотно глухое аура ясень 3д</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>дверное полотно катрин акация</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>дверные полотна 2400 массив</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>купить дверное полотно дешево</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>купить наличники на дверные проемы</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>полотно дверное глухое мюнхен цвет дуб дымчатый</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>размер коробки дверное полотно 600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>дверное полотно</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>дверное полотно 650х2000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>дверное полотно 800х2000 белое</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>352</th>\n",
+       "      <td>дверное полотно высота 230</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>дверное полотно деревянное</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>дверное полотно из дсп трубчатого сечения с hp...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>дверное полотно на заказ</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>деревянное дверное полотно цена</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>357</th>\n",
+       "      <td>как поменять полотно в двери</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>купить дверное полотно с четвертью 840 2000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1098</th>\n",
+       "      <td>хочу поменять межкомнатные двери с покупкой,де...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1099 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                keyword  visit\n",
+       "971                                           (not set)   2104\n",
+       "736                           np - /?cnt=catalog&r=2438   1340\n",
+       "737                           np - /?cnt=catalog&r=1428    548\n",
+       "738                                              np - /    361\n",
+       "739                                    np - /?pid=pokaz    134\n",
+       "740                           np - /?cnt=catalog&r=1010     81\n",
+       "543         купить раздвижные двери межкомнатные дешево     59\n",
+       "972   межкомнатные двери недорого с установкой под ключ     54\n",
+       "741                                     дверное полотно     43\n",
+       "742                                       полотно двери     42\n",
+       "743                             np - /?pid=menu-katalog     41\n",
+       "744                                     полотно дверное     39\n",
+       "745                            np - /?cnt=catalog&r=999     35\n",
+       "973                                       тук тук двери     32\n",
+       "467                                  двери межкомнатные     31\n",
+       "468                                      двери под ключ     30\n",
+       "469                                  двери с фурнитурой     24\n",
+       "544                         межкомнатные двери недорого     23\n",
+       "470                                    двери со скидкой     22\n",
+       "471                         магазин межкомнатных дверей     20\n",
+       "746                                  np - /?pid=contact     20\n",
+       "747                                   np - /?pid=skidki     20\n",
+       "748                           np - /?cnt=catalog&r=1018     19\n",
+       "749                           np - /?cnt=catalog&r=2966     16\n",
+       "472                        межкомнатные двери с замками     16\n",
+       "974   межкомнатные двери недорого с установкой под к...     16\n",
+       "975                                        took-took.ru     13\n",
+       "473                      двери с доставкой и установкой     13\n",
+       "474                                   двери с капителью     13\n",
+       "475                                 двери эмалированные     13\n",
+       "...                                                 ...    ...\n",
+       "360   полотно дверное глухое барселона cpl 80x200 см...      1\n",
+       "329                                полотно двери купить      1\n",
+       "344                      дверные полотна в леруа мерлен      1\n",
+       "330                                     полотно дверное      1\n",
+       "331                              полотно дверное глухое      1\n",
+       "332   полотно дверное глухое napoly 60x200 см шпон ц...      1\n",
+       "334                  виды дверей по конструкции полотна      1\n",
+       "335                         двери аксессуары павелецкая      1\n",
+       "336                                     дверное полотно      1\n",
+       "337                                 дверное полотно 500      1\n",
+       "338                            дверное полотно 800х2000      1\n",
+       "339                     дверное полотно helly шпон дуба      1\n",
+       "340                дверное полотно глухое аура ясень 3д      1\n",
+       "342                       дверное полотно катрин акация      1\n",
+       "343                         дверные полотна 2400 массив      1\n",
+       "345                       купить дверное полотно дешево      1\n",
+       "359                  купить наличники на дверные проемы      1\n",
+       "346     полотно дверное глухое мюнхен цвет дуб дымчатый      1\n",
+       "347                  размер коробки дверное полотно 600      1\n",
+       "349                                     дверное полотно      1\n",
+       "350                            дверное полотно 650х2000      1\n",
+       "351                      дверное полотно 800х2000 белое      1\n",
+       "352                          дверное полотно высота 230      1\n",
+       "353                          дверное полотно деревянное      1\n",
+       "354   дверное полотно из дсп трубчатого сечения с hp...      1\n",
+       "355                            дверное полотно на заказ      1\n",
+       "356                     деревянное дверное полотно цена      1\n",
+       "357                        как поменять полотно в двери      1\n",
+       "358         купить дверное полотно с четвертью 840 2000      1\n",
+       "1098  хочу поменять межкомнатные двери с покупкой,де...      1\n",
+       "\n",
+       "[1099 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['keyword', 'visit']].sort_values(by='visit', ascending=False)"
+   ]
   }
  ],
  "metadata": {
