new titles added

--- a/Reports/Took-Took.ru.ipynb
+++ b/Reports/Took-Took.ru.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Заргрузка исходных данных</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -61,14 +68,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "se = report.columns[:5]"
+    "<h3>Отчётный месяц</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January 2017'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{:%B %Y}'.format(curr_month)"
    ]
   },
   {
@@ -304,6 +329,17 @@
    ],
    "source": [
     "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "se = report.columns[:5] # срез по каналам трафика"
    ]
   },
   {
