update report table

--- a/Reports/Took-Took.ru.ipynb
+++ b/Reports/Took-Took.ru.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -137,11 +137,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2016-01-31</th>\n",
-       "      <td>3334</td>\n",
-       "      <td>1157</td>\n",
-       "      <td>512</td>\n",
-       "      <td>114</td>\n",
-       "      <td>847</td>\n",
+       "      <td>4471</td>\n",
+       "      <td>1253</td>\n",
+       "      <td>537</td>\n",
+       "      <td>123</td>\n",
+       "      <td>316</td>\n",
        "      <td>6</td>\n",
        "      <td>160</td>\n",
        "      <td>367</td>\n",
@@ -149,11 +149,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-02-29</th>\n",
-       "      <td>4471</td>\n",
-       "      <td>1253</td>\n",
-       "      <td>537</td>\n",
-       "      <td>123</td>\n",
-       "      <td>316</td>\n",
+       "      <td>5630</td>\n",
+       "      <td>1683</td>\n",
+       "      <td>597</td>\n",
+       "      <td>88</td>\n",
+       "      <td>543</td>\n",
        "      <td>19</td>\n",
        "      <td>264</td>\n",
        "      <td>533</td>\n",
@@ -161,11 +161,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-03-31</th>\n",
-       "      <td>5630</td>\n",
-       "      <td>1683</td>\n",
-       "      <td>597</td>\n",
-       "      <td>88</td>\n",
-       "      <td>543</td>\n",
+       "      <td>5946</td>\n",
+       "      <td>1641</td>\n",
+       "      <td>530</td>\n",
+       "      <td>101</td>\n",
+       "      <td>514</td>\n",
        "      <td>22</td>\n",
        "      <td>217</td>\n",
        "      <td>571</td>\n",
@@ -173,11 +173,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-04-30</th>\n",
-       "      <td>5946</td>\n",
-       "      <td>1641</td>\n",
-       "      <td>530</td>\n",
-       "      <td>101</td>\n",
-       "      <td>514</td>\n",
+       "      <td>5887</td>\n",
+       "      <td>1470</td>\n",
+       "      <td>479</td>\n",
+       "      <td>69</td>\n",
+       "      <td>228</td>\n",
        "      <td>24</td>\n",
        "      <td>196</td>\n",
        "      <td>484</td>\n",
@@ -185,11 +185,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-05-31</th>\n",
-       "      <td>5887</td>\n",
-       "      <td>1470</td>\n",
-       "      <td>479</td>\n",
-       "      <td>69</td>\n",
-       "      <td>228</td>\n",
+       "      <td>5846</td>\n",
+       "      <td>1183</td>\n",
+       "      <td>361</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0</td>\n",
        "      <td>21</td>\n",
        "      <td>243</td>\n",
        "      <td>485</td>\n",
@@ -298,11 +298,11 @@
       "text/plain": [
        "           channels                             goals                       \n",
        "             yandex google go.mail.ru  bry  cpc order basket contact measure\n",
-       "2016-01-31     3334   1157        512  114  847     6    160     367      16\n",
-       "2016-02-29     4471   1253        537  123  316    19    264     533      10\n",
-       "2016-03-31     5630   1683        597   88  543    22    217     571      20\n",
-       "2016-04-30     5946   1641        530  101  514    24    196     484      12\n",
-       "2016-05-31     5887   1470        479   69  228    21    243     485      27\n",
+       "2016-01-31     4471   1253        537  123  316     6    160     367      16\n",
+       "2016-02-29     5630   1683        597   88  543    19    264     533      10\n",
+       "2016-03-31     5946   1641        530  101  514    22    217     571      20\n",
+       "2016-04-30     5887   1470        479   69  228    24    196     484      12\n",
+       "2016-05-31     5846   1183        361   87    0    21    243     485      27\n",
        "2016-06-30     5913   1134        351   76    0    12    257     478      17\n",
        "2016-07-31     5166   1108        364   58    0    15    213     396      20\n",
        "2016-08-31     4689   1120        348   59    0    30    308     349      18\n",
@@ -313,13 +313,13 @@
        "2017-01-31     2949   3084        375  511    0     4    243     355       8"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "report"
+    "report['2016':'2017'] # данные за 2016-2017"
    ]
   },
   {
